# verso

./: .gitignore  .gitmodules  README.fr.md  README.md  package-lock.json  package.json
.github/scripts/: generate-latest-json.mjs
.github/workflows/: build-windows.yml  release.yml
docs/: mises-a-jour.md
examples/: bible-abc.json  bible-exemple.json  songbook-abc.json  songbook-exemple.json
src/: operator.html  projection.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/songbooks/: songbook-hec.json  songbook-ref.json  songbook-reflets.json
src-tauri/src/: bible_search.rs  lib.rs  main.rs  storage.rs  sync.rs
src/assets/css/: operator.css  projection-content.css  shared.css
src/assets/js/: api.js  i18n.js  operator.js  pdf-worker-config.js  projection-render.js  projection.js  utils.js
