[package]
name = "verso2"
version = "0.1.0"
description = "Verso — projection de chants et textes"
authors = ["Verso"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "verso2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
